--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Speed Dating App</title>
+    <title>Project Blinder</title>
     <script src="/socket.io/socket.io.js"></script>
     <style>
         body {
