--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
     </style>
 </head>
 <body>
-    <h1>Speed Dating App</h1>
+    <h1>Project Blinder</h1>
     
     <div class="video-container">
         <video id="localVideo" autoplay muted playsinline></video>
